[package]
name    = "bdf2"
version = "0.7.1"
edition = "2018"

authors = ["meh. <meh@schizofreni.co>"]
license = "WTFPL"

description = "BDF format handling."
repository  = "https://github.com/meh/rust-bdf"
keywords    = ["font", "bdf"]

[features]
default = []

# This feature is used for testing only and allows downloading fonts from GitHub
# to use as parsing test-cases
test-remote-fonts = []

[dependencies]
bit-set = "0.8.0"
thiserror = "2.0.0"

[dev-dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
